# cccm

./: .env.example  Cargo.toml  Dockerfile  README.md  README_CN.md  docker-compose.production.yml  docker-compose.yml
.github/workflows/: release.yml
locales/: en.json  zh.json
migrations/: 20250729001000_initial.down.sql  20250729001000_initial.up.sql  20250729002000_add_access_password.down.sql  20250729002000_add_access_password.up.sql  20250729003000_add_setup_method.down.sql  20250729003000_add_setup_method.up.sql
nginx/: nginx.conf
nginx/conf.d/: cccm.conf
src/: auth.rs  database.rs  i18n.rs  main.rs
src/handlers/: mod.rs
src/models/: mod.rs
templates/: dashboard.html  download_password.html  login.html
